Create mkdocs website
Former-commit-id: ea3dca5f3883bab3339e6236d1337cffd8e7dd3a

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ env
 *.xml
 *.iml
 .idea/
-*.png
 .env
 analysis/report_generation/build/
 analysis/report_generation/images/
 analysis/report_generation/*.tex
 all_logs/
+.cache/
