Autoconfigure font, log and locations files, cleanup remaining cv2 references
Former-commit-id: b696c42ed13e7f3259f195f73e7f87bf40553f00

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
 anthropic = [
     "anthropic>=0.66.0",
 ]
+webgui = [
+    "fastapi>=0.116.1",
+]
 
 [dependency-groups]
 dev = [
