--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "scipy>=1.16.1",
     "seaborn>=0.13.2",
     "tqdm>=4.67.1",
+    "typer>=0.17.3",
 ]
 
 [project.optional-dependencies]
