--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,14 +52,14 @@ nav:
   - Getting started:
       - Setup: getting-started/10-setup.md
       - Running the benchmark: getting-started/20-running.md
-      - Evaluating results: getting-started/30-evaluating.md
   - User guide:
+      - FlySearch.py: user-guide/00-script.md
+      - Conversation: user-guide/10-conversation.md
       - Result analysis: user-guide/20-result-analysis.md
       - Adding new models: user-guide/30-custom-agents.md
   - Internals:
       - Environment: internals/10-environment.md
-      - Conversation: internals/20-conversation.md
       - Custom environments: internals/30-custom-environments.md
       - Custom assets: internals/40-custom-assets.md
       - Building Unreal: internals/50-building-unreal.md
-  - Examples: logs/
+  - Examples: logs/ # Separate webapp, not handled by mkdocs
