--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,5 +24,5 @@ jobs:
           path: ~/.cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material[imaging]
+      - run: pip install mkdocs-material[imaging] mkdocs-macros-plugin mkdocs-table-reader-plugin
       - run: mkdocs gh-deploy --force
