Add more video samples to landing page, more page styling

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ theme:
     primary: blue grey
   icon:
     logo: material/quadcopter
+  favicon: imgs/favicon.png
   features:
     - navigation.instant
     - navigation.instant.progress
